--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ debian
 .pc
 build
 CMakeLists.txt.user
+.gdbinit
+.local.vimrc
+.ycm_extra_conf.py
 global.hpp
 test/include/Wintermute/Testing
 CMakeCache.txt
