--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ cmake_install.cmake
 cmake_uninstall.cmake
 FindWintermute.cmake
 src/Wintermute/Globals
-lib/heartbeat/globals.hpp
+lib/*/globals.hpp
 *.pyc
 gdb.txt
 *.orig
