--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,9 @@ notifications:
   email: me@jalcine.me
   on_success: change
   on_failure: always
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/a032628cb25b35b52924
+    on_success: change
+    on_failure: always
+    on_start: false
