--- a/src/globals.hpp.in
+++ b/src/globals.hpp.in
@@ -34,7 +34,7 @@
 /// {{{ Constants
 
 #define WINTERMUTE_NAME                       "Wintermute"
-#define WINTERMUTE_DOMAIN                     "wintermute.in"
+#define WINTERMUTE_DOMAIN                     "in.wintermute"
 #define WINTERMUTE_VERSION_MAJOR              @WINTERMUTE_VERSION_MAJOR@
 #define WINTERMUTE_VERSION_MINOR              @WINTERMUTE_VERSION_MINOR@
 #define WINTERMUTE_VERSION_PATCH              @WINTERMUTE_VERSION_PATCH@
