--- a/lib/dbus/CMakeLists.txt
+++ b/lib/dbus/CMakeLists.txt
@@ -20,11 +20,13 @@ project ( WintermuteDBus )
 set ( dbus_SRCS 
   plugin.cpp
   dispatcher.cpp
+  receiver.cpp
   module.cpp )
 
 set ( dbus_HDRS
   plugin.hpp
   dispatcher.hpp
+  receiver.hpp
   module.hpp )
 
 configure_file ( globals.hpp.in ${CMAKE_SOURCE_DIR}/lib/dbus/globals.hpp
