Updated factory to handle plugin in separate processes (lightly).

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,6 +43,7 @@ set ( WINTERMUTE_SOURCES
   ## Plugin binaries
   Wintermute/factory.cpp
   Wintermute/plugin.cpp
+  Wintermute/plugin_process.cpp
 
   ## Core binaries
   Wintermute/logging.cpp
