--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,4 +47,4 @@ enable_testing()
 add_subdirectory ( src )
 add_subdirectory ( lib )
 add_subdirectory ( test )
-#add_subdirectory( doc )
+add_subdirectory ( doc )
