Implemented ability to get replies from calls that are invoked over the wire.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,7 @@ set ( WINTERMUTE_SOURCES
   Wintermute/Procedure/module.cpp
   Wintermute/Procedure/process_module.cpp
   Wintermute/Procedure/call.cpp
+  Wintermute/Procedure/reply_call.cpp
   Wintermute/Procedure/lambda_call.cpp
   Wintermute/Procedure/method_call.cpp
   Wintermute/Procedure/dispatcher.cpp
