--- a/src/globals.hpp.in
+++ b/src/globals.hpp.in
@@ -26,6 +26,8 @@
 
 // Good chance we'd need these headers.
 #include <QtCore/QObject>
+#include <QtCore/QPointer>
+#include <QtCore/QScopedPointer>
 #include <QtCore/QSharedPointer>
 #include <QtCore/QSharedDataPointer>
 
