--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -1,4 +1,11 @@
-
+#############################################################################
+### Copyright (C) 2011 - 2014 Jacky Alciné <me@jalcine.me>
+###
+### This file is part of Wintermute, the extensible AI platform.
+###
+### Wintermute is free software; you can redistribute it and/or modify
+### it under the terms of the GNU General Public License as published by
+### the Free Software Foundation; either version 3 of the License, or
 ### (at your option) any later version.
 ###
 ### Wintermute is distributed in the hope that it will be useful,
@@ -8,8 +15,7 @@
 ###
 ### You should have received a copy of the GNU General Public License
 ### along with Wintermute.  If not, see <http://www.gnu.org/licenses/>.
-###############################################################################
-
+#############################################################################
 cmake_minimum_required(VERSION 2.8)
 
 ## Include the modules
