--- a/cmake/Templates/Doxyfile.in
+++ b/cmake/Templates/Doxyfile.in
@@ -120,8 +120,8 @@ USE_MDFILE_AS_MAINPAGE =
 SOURCE_BROWSER         = NO
 INLINE_SOURCES         = NO
 STRIP_CODE_COMMENTS    = YES
-REFERENCED_BY_RELATION = NO
-REFERENCES_RELATION    = NO
+REFERENCED_BY_RELATION = YES
+REFERENCES_RELATION    = YES
 REFERENCES_LINK_SOURCE = NO
 SOURCE_TOOLTIPS        = NO
 USE_HTAGS              = NO
@@ -140,18 +140,17 @@ HTML_OUTPUT            = html
 HTML_FILE_EXTENSION    = .htm
 HTML_HEADER            = 
 HTML_FOOTER            =
-HTML_STYLESHEET        =
 HTML_EXTRA_STYLESHEET  =
 HTML_EXTRA_FILES       =
 HTML_COLORSTYLE_HUE    = 220
 HTML_COLORSTYLE_SAT    = 100
 HTML_COLORSTYLE_GAMMA  = 80
 HTML_TIMESTAMP         = YES
-HTML_DYNAMIC_SECTIONS  = NO
+HTML_DYNAMIC_SECTIONS  = YES
 HTML_INDEX_NUM_ENTRIES = 100
-GENERATE_DOCSET        = NO
-DOCSET_FEEDNAME        = "Doxygen generated docs"
-DOCSET_BUNDLE_ID       = org.doxygen.Project
+GENERATE_DOCSET        = YES
+DOCSET_FEEDNAME        = "Documentation for @wgd_NAME@"
+DOCSET_BUNDLE_ID       = "in.wintermute.@wgd_TARGET@"
 DOCSET_PUBLISHER_ID    = org.doxygen.Publisher
 DOCSET_PUBLISHER_NAME  = Publisher
 GENERATE_HTMLHELP      = NO
@@ -161,10 +160,10 @@ GENERATE_CHI           = NO
 CHM_INDEX_ENCODING     =
 BINARY_TOC             = NO
 TOC_EXPAND             = NO
-GENERATE_QHP           = NO
-QCH_FILE               =
-QHP_NAMESPACE          = org.doxygen.Project
-QHP_VIRTUAL_FOLDER     = doc
+GENERATE_QHP           = YES
+QCH_FILE               = "@wgd_OUTPUT_DIRECTORY@/@wgd_TARGET@.qch"
+QHP_NAMESPACE          = "in.wintermute.@wgd_TARGET@"
+QHP_VIRTUAL_FOLDER     = "@wgd_NAME@"
 QHP_CUST_FILTER_NAME   =
 QHP_CUST_FILTER_ATTRS  =
 QHP_SECT_FILTER_ATTRS  =
@@ -265,8 +264,8 @@ SKIP_FUNCTION_MACROS   = YES
 # Configuration options related to external references
 #---------------------------------------------------------------------------
 TAGFILES               =
-GENERATE_TAGFILE       =
-ALLEXTERNALS           = NO
+GENERATE_TAGFILE       = "@wgd_OUTPUT_DIRECTORY@/doxy.tags@"
+ALLEXTERNALS           = YES
 EXTERNAL_GROUPS        = YES
 EXTERNAL_PAGES         = YES
 PERL_PATH              = /usr/bin/perl
@@ -277,9 +276,9 @@ CLASS_DIAGRAMS         = YES
 MSCGEN_PATH            =
 DIA_PATH               =
 HIDE_UNDOC_RELATIONS   = YES
-HAVE_DOT               = @DOXYGEN_HAVE_DOT@
+HAVE_DOT               = "@DOXYGEN_HAVE_DOT@"
 DOT_NUM_THREADS        = 0
-DOT_FONTNAME           = Helvetica
+DOT_FONTNAME           = Roboto
 DOT_FONTSIZE           = 10
 DOT_FONTPATH           = 
 CLASS_GRAPH            = YES
@@ -296,7 +295,7 @@ GRAPHICAL_HIERARCHY    = YES
 DIRECTORY_GRAPH        = YES
 DOT_IMAGE_FORMAT       = svg
 INTERACTIVE_SVG        = YES
-DOT_PATH               = @DOXYGEN_DOT_PATH@
+DOT_PATH               = "@DOXYGEN_DOT_PATH@"
 DOTFILE_DIRS           =
 MSCFILE_DIRS           =
 DIAFILE_DIRS           =
