Biggest commit ever.

--- a/.astylerc
+++ b/.astylerc
@@ -5,16 +5,16 @@
 --indent=spaces=2
 --indent-classes
 --indent-switches
---indent-namespaces
 --indent-preprocessor
 --indent-col1-comments
---min-conditional-indent=1
 --add-brackets
---align-pointer=name
+--align-pointer=type
+--align-reference=type
+--max-code-length=80
 --break-after-logical
+--break-blocks
 --delete-empty-lines
 --convert-tabs
---max-code-length=80
 --pad-header
 --preserve-date
 --suffix=none
