--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -15,9 +15,13 @@
 ###
 ### You should have received a copy of the GNU General Public License
 ### along with Wintermute.  If not, see <http://www.gnu.org/licenses/>.
-###############################################################################
-option(WITH_ZEROMQ "Include ZeroMQ plug-in." OFF)
-option(WITH_DBUS   "Include D-Bus plug-in."  OFF)
+##############################################################################
+option(WITH_ZEROMQ "Builds the ZeroMQ plug-in." OFF)
+option(WITH_DBUS   "Builds the D-Bus plug-in."  QT_QTDBUS_FOUND)
+
+add_feature_info(QtDBus WITH_DBUS "Provides the D-Bus RPC extension.")
+add_feature_info(QtZeroMQ WITH_ZEROMQ "Provides the ZeroMQ RPC extension.")
+
 add_subdirectory ( heartbeat )
 add_subdirectory ( daemon )
 
@@ -28,3 +32,4 @@ endif()
 if (WITH_ZEROMQ)
   add_subdirectory ( zeromq )
 endif()
+
