--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,3 +48,6 @@ add_subdirectory(src)
 add_subdirectory(lib)
 add_subdirectory(test)
 add_subdirectory(doc)
+
+## Provide feature report.
+feature_summary(WHAT ALL)
