Updated test and cmake files.
  Updated README, test and cmake files.
  Updated travis configuration to look for QCommandLine in proper place.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,13 @@ script:
 after_success:
   - coveralls -r . -e .
 
+env:
+  - CMAKE_MODULE_PATH=/usr/share/apps/cmake/Modules
+
+branches:
+  except:
+    - master
+
 notifications:
   email: me@jalcine.me
   webhooks:
