--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ compiler:
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - sudo apt-get install -qq pkg-config cmake qt4-dev-tools libqt4-dev libqt4-dbg libqjson0 libqjson-dev libqjson-dbg python-pip python lcov valgrind libzmq3-dev libzmq3-dbg libzmq3 g++-4.7
+  - sudo apt-get install -qq pkg-config cmake qt4-dev-tools libqt4-dev libqt4-dbg libqjson0 libqjson-dev libqjson-dbg python-pip python lcov valgrind libzmq3-dev libzmq3-dbg libzmq3
   - sudo pip install cpp-coveralls
   - test/build_deps.sh
 
