--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_script:
   - cmake .. -DCMAKE_BUILD_TYPE=Debug -DWITH_DBUS=ON -DWITH_TESTS=ON -DWITH_DOCUMENTATION=OFF -DCMAKE_MODULE_PATH=/usr/share/apps/cmake
 
 script:
+  - make all
   - make test
 
 after_success:
