--- a/src/globals.hpp.in
+++ b/src/globals.hpp.in
@@ -1,4 +1,4 @@
-/**
+/*
  * @author Jacky Alciné <me@jalcine.me>
  * @copyright © 2011, 2012, 2013, 2014 Jacky Alciné <me@jalcine.me>
  * @if 0
@@ -16,7 +16,7 @@
  * along with Wintermute.  If not, see <http://www.gnu.org/licenses/>.
  * @endif
  *
- **/
+ */
 
 #ifndef WINTERMUTE_GLOBALS_HPP
 #define WINTERMUTE_GLOBALS_HPP
@@ -32,69 +32,75 @@
  * @defgroup WntrConstants Compile-Time Constants
  * {
  */
-/**
+/*
  * @def WINTERMUTE_NAME
  * @brief The alias Wintermute will use for internal purposes.
  */
 #define WINTERMUTE_NAME "Wintermute"
 
-/**
+/*
  * @def WINTERMUTE_DOMAIN
  * @brief The domain that Wintermute's processes reference to.
  */
 #define WINTERMUTE_DOMAIN "in.wintermute"
 
-/**
+/*
  * @def   WINTERMUTE_VERSION_MAJOR
  * @brief Obtains the major version number upon compilation of Wintermute.
  */
 #define WINTERMUTE_VERSION_MAJOR           @WINTERMUTE_VERSION_MAJOR@
 
-/**
+/*
  * @def   WINTERMUTE_VERSION_MINOR
  * @brief Obtains the minor version number upon compilation of Wintermute.
  */
 #define WINTERMUTE_VERSION_MINOR           @WINTERMUTE_VERSION_MINOR@
 
-/**
+/*
  * @def   WINTERMUTE_VERSION_PATCH
  * @brief Obtains the minor version number upon compilation of Wintermute.
  */
 #define WINTERMUTE_VERSION_PATCH           @WINTERMUTE_VERSION_PATCH@
 
-/**
+/*
+ * @def   WINTERMUTE_VERSION
+ * @brief Obtains the major, minor and patch version number upon compilation of Wintermute.
+ */
+#define WINTERMUTE_VERSION "@WINTERMUTE_VERSION_MAJOR@.@WINTERMUTE_VERSION_MINOR@.@WINTERMUTE_VERSION_PATCH@"
+
+/*
  * @def   WINTERMUTE_VERSION_STAGE
  * @brief Obtains the minor version number upon compilation of Wintermute.
  */
 #define WINTERMUTE_VERSION_STAGE           @WINTERMUTE_VERSION_STAGE@
 
-/**
+/*
  * @def   WINTERMUTE_VERSION_STAGE_BRANCH
  * @brief Obtains the minor version number upon compilation of Wintermute.
  */
 #define WINTERMUTE_VERSION_STAGE_BRANCH    "@WINTERMUTE_VERSION_STAGE_BRANCH@"
 
-/**
+/*
  * @def   WINTERMUTE_VERSION_STAGE_REF
  * @brief Obtains the minor version number upon compilation of Wintermute.
  */
 #define WINTERMUTE_VERSION_STAGE_REF       "@WINTERMUTE_VERSION_STAGE_REF@"
 
-/**
+/*
  * @def   WINTERMUTE_PLUGIN_LIBRARY_DIR
  * @brief Obtains the minor version number upon compilation of Wintermute.
  */
 #define WINTERMUTE_PLUGIN_LIBRARY_DIR      "@WINTERMUTE_PLUGIN_LIBRARY_DIR@"
 
-/**
+/*
  * @def   WINTERMUTE_PLUGIN_DEFINITION_DIR
  * @brief Obtains the minor version number upon compilation of Wintermute.
  */
 #define WINTERMUTE_PLUGIN_DEFINITION_DIR   "@WINTERMUTE_PLUGIN_DEFINITION_DIR@"
 
-/** @internal */
+/* @internal */
 #define WINTERMUTE_ERROR_MODE_FAILED       0x00101
 
-/** @} */
+/* @} */
 
 #endif /* WINTERMUTE_GLOBALS_HPP */
